--- a/test/fixtures/notes.yml
+++ b/test/fixtures/notes.yml
@@ -3,9 +3,9 @@
 one:
   employee_id: 1
   reference_id: 1
-  message: MyText
+  message: Faker::LoremImpsum::Sentences(2)
 
 two:
   employee_id: 1
   reference_id: 1
-  message: MyText
+  message: Faker::LoremImpsum::Sentences(2)
