--- a/test/fixtures/employees.yml
+++ b/test/fixtures/employees.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
-  ema: MyString
+  first_name: Faker::Person::FirstName
+  last_name: Faker::Person::LastName
+  email: Faker::EmailAddress
+  phone: Faker::Phone::Number
 
 two:
-  first_name: MyString
-  last_name: MyString
-  ema: MyString
+  first_name: Faker::Name::FirstName
+  last_name: Faker::Name::LastName
+  email: Faker::EmailAddress
+  phone: Faker::Numbers::Phone
