--- a/test/fixtures/habitats.yml
+++ b/test/fixtures/habitats.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  descriptors: 
+  name: 'desert'
+  descriptors: {"temperatures":{"minimum": 90, "maximum": 120}, "humidity": ["dry"]}
 
 two:
-  descriptors: 
+  name: 'jungle'
+  descriptors: {"temperatures":{"minimum": 90, "maximum": 120}, "humidity": ["moist"]}
